--- a/payments/templates/payments/checkout.html
+++ b/payments/templates/payments/checkout.html
@@ -16,7 +16,9 @@
             <h4>Total: <span id="total-price"></span> UAH</h4>
         </div>
         <div class="text-right">
-            <input type="submit" class="btn btn-success" value="Save">
+            <div class="checkout-button">
+                <input type="submit" class="btn btn-primary checkout-button" value="Save">
+            </div>
         </div>
     </form>
 </div>
