--- a/payments/templates/payments/organization_create.html
+++ b/payments/templates/payments/organization_create.html
@@ -9,7 +9,7 @@
                 <span class="">Create service</span>
             </div>
         </div>
-        <div class="info-wrapper text-left">
+        <div class="col info-wrapper text-left">
             <div class="info">
                 <div class="form-group">
                     <form method="post" id="service-create-form">
