--- a/payments/templates/payments/organization_detail.html
+++ b/payments/templates/payments/organization_detail.html
@@ -7,11 +7,11 @@
 </div>-->
 <div class="row service-detail-row">
     <div class="col service-detail">
-        <div class="row">
+        <div class="row align-items-center">
 
             <!--Title-->
             <div class="col service-title text-left">
-                <span class="">{{ organization.title }}</span>
+                <h3>{{ organization.title }}</h3>
             </div>
 
             <!--Options-->
@@ -49,11 +49,11 @@
             <!--Tariff-->
             <div class="row">
                 <div class="col info-values">
-                    <span class="details-item">
+                    <div class="details-item">
                         Tariff
-                    </span>
-                    <span class="service-detail-item">{{ organization.tariff }}<span class="values-units">
-                                hrn</span></span>
+                    </div>
+                    <div class="service-detail-item">{{ organization.tariff }}<span class="values-units">
+                                hrn</span></div>
                 </div>
             </div>
 
