--- a/payments/templates/payments/payment_create.html
+++ b/payments/templates/payments/payment_create.html
@@ -90,12 +90,12 @@
                         </div>
 
                         <!--Payment period-->
-                        <div class="row mt-5">
+                        <!--<div class="row mt-5">
                             <div class="col-lg-md-4">
                                 <label for="period"><span class="field-label">Payment period</span></label>
                                 <input type="text" id="period" name="payment_period" value="{{ payment_period|date:'m, Y' }}">
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                 </form>
             </div>
