--- a/payments/templates/payments/payment_archive.html
+++ b/payments/templates/payments/payment_archive.html
@@ -3,19 +3,31 @@
 {% block page-title %}<h3>{{ organization }}</h3>{% endblock %}
 {% block content %}
 {% if payments %}
-{% for payment in payments %}
-<div class="card text-left" style="width: 18rem;">
-    <div class="card-body">
-        <h5 class="card-title">{{ organization }}</h5>
-        <p class="card-text">{{ payment.previous_counter_value }} - {{ payment.current_counter_value }} ({{ payment.organization.measurement_units }}.)</p>
-        <div class="add-button text-right">
-            <a href="#" class="btn btn-primary">Add to Cart</a>
+<div class="row service-detail-row">
+    <div class="col service-detail">
+        <div class="row">
+            <div class="col service-title text-left">
+                <h3><a href="{% url 'organization_detail_url' organization.slug %}">{{ organization.title }}</a> Payment Archive</h3>
+            </div>
         </div>
-    </div>
-</div>
+        <div class="row justify-content-center">
+            <div class="col archive-body">
+                {% for payment in payments %}
+                    <div class="col-12 card archive-card  mb-3 text-left">
+                        <div class="card-body">
+                            <h5 class="card-title">{{ payment.date }}</h5>
+                            <p class="card-text">{{ payment.previous_counter_value }} - {{ payment.current_counter_value }} <span class="measurement_units">{{ payment.organization.measurement_units }}</span></p>
+                            <div class="add-button text-right">
+                                <a href="{% url 'payment_detail_url' payment.pk %}" class="stretched-link"></a>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
 
-<br>
-{% endfor %}
+    </div>
+    </div>
 {% else %}
 <p style=" font-weight: 400;
   font-size: 30px;
