--- a/payments/templates/payments/snippets/append_to_cart.html
+++ b/payments/templates/payments/snippets/append_to_cart.html
@@ -1,6 +1,12 @@
 <li>
-    <h4>{{ payment.payment.organization.title }}</h4>
+    <div class="cart-items__title">
+    <h4>{{ payment.payment.organization.title }}</h4><a href="{% url 'cart_delete_url' %}" class="delete-item"
+                                                             data-payments-in-cart-pk="{{ payment.pk }}"><button type="button" class="close" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+      </a>
+    </div>
     values: {{ payment.payment.previous_counter_value }} - {{ payment.payment.current_counter_value }}<br>
     difference: {{ payment.payment.difference }} {{ payment.payment.organization.measurement_units }}<br>
-    price: {{ price_per_payment }} UAH <a href="{% url 'cart_delete_url' %}" class="delete-item" data-payments-in-cart-pk="{{ payment.pk }}">X</a><br><br>
+    price: {{ price_per_payment }} uah
 </li>
