--- a/payments/static/payments/style.css
+++ b/payments/static/payments/style.css
@@ -43,6 +43,11 @@ h5  {
   box-shadow: 0px 8px 16px -4px rgba(230, 235, 242, 1);
 }
 
+.nav-item {
+    display: flex;
+    align-items: center;
+}
+
 a {
   text-decoration: none !important;
 }
@@ -159,11 +164,11 @@ input:focus {
 .btn-primary {
     padding-left: 55px !important;
     padding-right: 55px !important;
-  color: white !important;
-  border-radius: 30px;
-  border-color: #655feb;
-  background-color: #655feb;
-  box-shadow: 0px 14px 25px -6px rgba(147, 143, 230, 1);
+    color: white !important;
+    border-radius: 30px;
+    border-color: #655feb;
+    background-color: #655feb;
+    box-shadow: 0px 14px 25px -6px rgba(147, 143, 230, 1);
 }
 
 .btn-primary:hover {
@@ -184,6 +189,17 @@ input:focus {
   background-color: #4e48bd !important;
   border-color: #655feb !important;
 }
+
+
+.btn-secondary {
+    width: 150px;
+    border-radius: 30px;
+    background-color: #ffffff;
+    color: #696e78;
+    border: #f8fbff solid 1px;
+    box-shadow: 0px 14px 25px -6px rgba(184,183,204,1);
+}
+
 
 
 #difference {
@@ -577,4 +593,21 @@ org-item-wrapper {
 
 .checkout-item {
   margin: 35px auto;
+}
+
+.modal-content {
+    padding: 10px;
+    color: #696e78 !important;
+    border: none !important;
+    font-size: 30px;
+    font-weight: 300;
+}
+
+.modal-title {
+    font-family: "Roboto", sans-serif !important;
+    font-weight: 400 !important;
+}
+
+.modal-header, .modal-footer {
+    border: none ! important;
 }
