--- a/payments/templates/payments/snippets/append_to_cart.html
+++ b/payments/templates/payments/snippets/append_to_cart.html
@@ -1,10 +1,13 @@
 <li>
     <div class="cart-items__title">
-    <h4>{{ payment.payment.organization.title }}</h4><a href="{% url 'cart_delete_url' %}" class="delete-item"
-                                                             data-payments-in-cart-pk="{{ payment.pk }}"><button type="button" class="close" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
-      </a>
+    <h4>{{ payment.payment.organization.title }}</h4>
+        <a href="{% url 'cart_delete_url' %}" class="delete-item" data-payments-in-cart-pk="{{ payment.pk }}">
+            <!--Delete icon-->
+            <svg width="1.5em" height="auto" viewBox="0 0 16 16" class="bi bi-x" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" d="M11.854 4.146a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708-.708l7-7a.5.5 0 0 1 .708 0z"/>
+                <path fill-rule="evenodd" d="M4.146 4.146a.5.5 0 0 0 0 .708l7 7a.5.5 0 0 0 .708-.708l-7-7a.5.5 0 0 0-.708 0z"/>
+            </svg>
+        </a>
     </div>
     values: {{ payment.payment.previous_counter_value }} - {{ payment.payment.current_counter_value }}<br>
     difference: {{ payment.payment.difference }} {{ payment.payment.organization.measurement_units }}<br>
