--- a/payments/static/payments/style.css
+++ b/payments/static/payments/style.css
@@ -14,7 +14,6 @@ body {
 .container-fluid {
   width: 100%;
   max-width: 1024px;
-  min-width: 400px;
   display: inline-block;
   text-align: center;
   margin: auto;
@@ -26,16 +25,22 @@ a {
     color: #4e48bd;
 }
 
-h1, h2, h3, h4, {
+h1, h2, h3, h4, h5, .login-bottom__text {
     font-family: "Raleway", sans-serif !important;
     font-weight: 600 !important;
     color: #696e78 !important;
     margin-bottom: 0px !important;
 }
 
-h5  {
+h5, .login-bottom__text  {
     font-weight: 300 !important;
 }
+
+.login-bottom__text {
+    line-height: 2;
+    font-size: 20px;
+}
+
 
 .navbar {
   margin-bottom: 18px;
@@ -50,6 +55,7 @@ h5  {
 
 a {
   text-decoration: none !important;
+  font-weight: 400;
 }
 
 .fields-wrapper input {
@@ -62,6 +68,7 @@ a {
   height: 40px  !important;
   height: 40px  !important;
   font-weight: 300;
+  font-size: 20px;
   color: #696e78;
 
 }
@@ -127,6 +134,24 @@ input:focus {
     color: #655feb;
 }
 
+.bottom-buttons {
+    display: flex;
+    justify-content: space-between;
+}
+
+.input-login {
+    margin-right: 0 !important;
+}
+
+
+.login-title-description {
+	margin: 8px auto 8px 15px;
+}
+
+
+.socialaccount {
+    margin-top: 8px;
+}
 
 .main-detail-wrapper {
     width: 100%;
@@ -162,8 +187,10 @@ input:focus {
 
 
 .btn-primary {
-    padding-left: 55px !important;
-    padding-right: 55px !important;
+    /*padding-left: 55px !important;
+    padding-right: 55px !important;*/
+    width: 150px;
+    height: 45px;
     color: white !important;
     border-radius: 30px;
     border-color: #655feb;
@@ -198,6 +225,9 @@ input:focus {
     color: #696e78;
     border: #f8fbff solid 1px;
     box-shadow: 0px 14px 25px -6px rgba(184,183,204,1);
+}
+
+.google-btn {
 }
 
 
@@ -264,6 +294,7 @@ input:focus {
     display: flex;
     flex-direction: column;
     padding-left: 0 !important;
+    padding-right: 0 !important;
 }
 
 .service-detail-row {
