--- a/payments/templates/payments/header.html
+++ b/payments/templates/payments/header.html
@@ -1,17 +1,20 @@
 {% load static %}
-<nav class="navbar sticky-bottom navbar-toggleable-xs navbar-expand-sm navbar-light bg-light">
+<nav class="navbar sticky-top navbar-toggleable-xs navbar-expand-sm navbar-light bg-light">
   {% url 'organization_list_url' as organization_list_url %}
+  {% url 'account_logout' as logout_page_url %}
+  {% url 'account_signup' as signup_page_url %}
+  {% url 'account_login' as login_page_url %}
   {% if  request.path == organization_list_url %}
   <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"><img
-      src="{% static 'payments/media/img/onehome_logo_gradient.png' %}" style="width: 150px; height: auto"
-      alt="onehome"></a>
+          src="{% static 'payments/media/img/onehome_logo_gradient.png' %}" style="width: 150px; height: auto"
+          alt="onehome"></a>
   {% else %}
   <a class="navbar-brand" href="{% url 'organization_list_url' %}"><img
-      src="{% static 'payments/media/img/onehome_logo_gradient.png' %}" style="width: 150px; height: auto"
-      alt="onehome"></a>
+          src="{% static 'payments/media/img/onehome_logo_gradient.png' %}" style="width: 150px; height: auto"
+          alt="onehome"></a>
   {% endif %}
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
-    aria-expanded="false" aria-label="Toggle navigation">
+          aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
@@ -32,9 +35,11 @@
       </li>
     </ul>
     <ul class="navbar-nav ml-auto text-right">
+      {% if request.path != signup_page_url and request.path != login_page_url %}
       <li>
 
         <!--Cart icon-->
+
         <a class="nav-link" id="cart" href=""><i class="fas fa-cart-plus fa-lg" id="cart-icon"></i><span id="total-payments">
             {% if total_payments %}
             {{ total_payments }}
@@ -43,16 +48,15 @@
             {% endif %}
           </span></a>
       </li>
-
+      {% endif %}
       <!--Profile icon-->
+      {% if request.path != signup_page_url and request.path != login_page_url %}
+
       <li>
         <a href="{% url 'profile_settings_url' %}" class="nav-link" title="Profile"><i class="fas fa-user fa-lg"></i></a>
       </li>
-
+      {% endif %}
       <!--Sign out-->
-      {% url 'account_logout' as logout_page_url %}
-      {% url 'account_signup' as signup_page_url %}
-      {% url 'account_login' as login_page_url %}
       {% if request.path != logout_page_url and request.path != signup_page_url and request.path != login_page_url %}
       <li class="nav-item">
         <a href="{% url 'account_logout' %}" class="nav-link" type="button" data-toggle="modal" data-target="#exampleModalCenter" title="Log Out"><i
