--- a/payments/templates/payments/organization_detail.html
+++ b/payments/templates/payments/organization_detail.html
@@ -86,7 +86,7 @@
     </div>
 </div>
 <div class="new-payment-button">
-    <a href="{% url 'payment_create_url' organization.slug %}" class="btn btn-primary mt-5">New payment</a>
+    <a href="{% url 'payment_create_url' organization.slug %}"><button class="btn btn-primary mt-5">New payment</button></a>
 </div>
 {% endif %}
 {% endblock %}
